--- a/lyden_av_byen/src/App.css
+++ b/lyden_av_byen/src/App.css
@@ -48,8 +48,89 @@
   border: 2px solid blue;
 }
 .button{
-  position: absolute;
+  position: fixed;
+  z-index: 3;
   background-color: cornflowerblue;
   
   border: 2px solid red;
+}
+.svg-icon{
+  position: absolute;
+  z-index: 4;
+  left: 90%;
+  top: 10px;
+  width: 5%;
+  height: auto;
+}
+
+
+
+/* Popup style */
+.popup-grid {
+  position: absolute;
+  grid-template-columns: auto auto auto ;
+  display: inline-grid;
+  top: 20px;
+  left: 50px;
+}
+
+.popup-box {
+  position: fixed;
+  z-index: 10;
+  background: #00000050;
+  width: 100%;
+  height: 100vh;
+  top: 0;
+  left: 0;
+}
+ 
+.box {
+  position: relative;
+  width: 70%;
+  margin: 0 auto;
+  height: auto;
+  max-height: 70vh;
+  margin-top: calc(100vh - 85vh - 20px);
+  background: #fff;
+  border-radius: 4px;
+  padding: 20px;
+  border: 1px solid #999;
+  overflow: auto;
+}
+
+.info-button {
+  
+  position: relative;
+  z-index: 2;
+  width: auto;
+  height: auto;
+  top: auto;
+  left: auto;
+  margin: 5%;
+  background-color: white; /* Green */
+  border:2px solid grey;
+  border-radius: 25%;
+  color: rgb(0, 0, 0);
+  padding: 10px 10px;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 16px;
+  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+}
+ 
+.close-icon {
+  content: 'x';
+  cursor: pointer;
+  position: fixed;
+  right: calc(15% - 30px);
+  top: calc(100vh - 85vh - 33px);
+  background: #ededed;
+  width: 25px;
+  height: 25px;
+  border-radius: 50%;
+  line-height: 20px;
+  text-align: center;
+  border: 1px solid #999;
+  font-size: 20px;
 }
