--- a/lyden_av_byen/src/App.css
+++ b/lyden_av_byen/src/App.css
@@ -115,7 +115,9 @@
   padding: 10px 10px;
   text-align: center;
   text-decoration: none;
-  display: inline-block;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   font-size: 16px;
   font-family: Arial, Helvetica, sans-serif;
 }
@@ -134,4 +136,53 @@
   text-align: center;
   border: 1px solid #999;
   font-size: 20px;
+}
+
+.color-scale-container {
+  position: absolute;
+  bottom: 20px;
+  right: 30px;
+  width: 70px;
+  height: 200px;
+  z-index: 3;
+}
+
+.color-scale-element { 
+  position: relative;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+}
+.color-scale-element-color { 
+  width: 60%;
+  height: 100%;
+}
+.color-scale-element-text { 
+  font-size: 15px;
+  background-color: transparent;
+  color:rgb(0, 0, 0);
+  width: 20%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.audio-calibrator-button-container {
+  height: 40px;
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  
+}
+.audio-calibrator-button{
+  width: 30px;
+  height: 30px;
+}
+
+.audio-calibrator-button-text {
+  display: flex;
+  align-items: center;
+  height: 100%;
+  margin: 0px 10px 0px 0px;
 }
